sfdx-spa-alcala/force-app/main/default/objects/Student_Year_Semester__c/Student_Year_Semester__c.object-meta.xml
<CustomObject>
    <label>Enrollment</label>
    <nameField>
        <displayFormat>SY - {00000}</displayFormat>
        <label>Student Year/Semester Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>