sfdx-spa-alcala/force-app/main/default/objects/Student_Year_Semester__c/fields/School_Year_CY__c.field-meta.xml
<CustomField>
    <fullName>School_Year_CY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Year</label>
    <referenceTo>School_Year__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>