sfdx-spa-alcala/force-app/main/default/objects/Student_Year_Semester__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Year__c</field>
            <operation>equals</operation>
            <valueField>Section__c.Year__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Section__c</referenceTo>
    <relationshipName>Student_Years_Semesters</relationshipName>
    <type>Lookup</type>
</CustomField>