sfdx-spa-alcala/force-app/main/default/objects/Student_Year_Semester__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semester</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Period_Semester__c.Section__c</field>
            <operation>equals</operation>
            <valueField>$Source.Section__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Period_Semester__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Student_Years_Semesters1</relationshipName>
    <type>Lookup</type>
</CustomField>