sfdx-spa-alcala/force-app/main/default/objects/Student_Year_Semester__c/fields/student_fullname__c.field-meta.xml
<CustomField>
    <fullName>student_fullname__c</fullName>
    <formula>Student__r.LastName+&#39;, &#39;+Student__r.FirstName+&#39; &#39;+Student__r.Middle_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>student fullname</label>
    <type>Text</type>
</CustomField>