sfdx-spa-alcala/force-app/main/default/objects/Student_Year_Semester__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Type Grade and click the magnifying glass to display all the grade levels</inlineHelpText>
    <label>Year</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 AND 9) AND (2 OR 3 OR 4 OR 5)) OR (6 AND (7 OR 8))</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Junior Highschool</value>
        </filterItems>
        <filterItems>
            <field>Year__c.Name</field>
            <operation>equals</operation>
            <value>Grade 7</value>
        </filterItems>
        <filterItems>
            <field>Year__c.Name</field>
            <operation>equals</operation>
            <value>Grade 8</value>
        </filterItems>
        <filterItems>
            <field>Year__c.Name</field>
            <operation>equals</operation>
            <value>Grade 9</value>
        </filterItems>
        <filterItems>
            <field>Year__c.Name</field>
            <operation>equals</operation>
            <value>Grade 10</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Senior Highschool</value>
        </filterItems>
        <filterItems>
            <field>Year__c.Name</field>
            <operation>equals</operation>
            <value>Grade 11</value>
        </filterItems>
        <filterItems>
            <field>Year__c.Name</field>
            <operation>equals</operation>
            <value>Grade 12</value>
        </filterItems>
        <filterItems>
            <field>$Source.School_Year_CY__c</field>
            <operation>equals</operation>
            <valueField>Year__c.School_Year__r.Id</valueField>
        </filterItems>
        <infoMessage>Type Grade and click Go to display all the grade levels</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Year__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Student_Years_Semesters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>