sfdx-spa-alcala/force-app/main/default/objects/Student_Year_Semester__c/recordTypes/Junior_Highschool.recordType-meta.xml
<RecordType>
    <fullName>Junior_Highschool</fullName>
    <active>true</active>
    <description>Grades 7-10</description>
    <label>Junior Highschool</label>
</RecordType>