sfdx-spa-alcala/force-app/main/default/objects/Student_Year_Semester__c/recordTypes/Senior_Highschool.recordType-meta.xml
<RecordType>
    <fullName>Senior_Highschool</fullName>
    <active>true</active>
    <description>Grades 11-12</description>
    <label>Senior Highschool</label>
</RecordType>