sfdx-spa-alcala/force-app/main/default/objects/Student_Year_Semester__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>Student__c</columns>
    <columns>School_Year_CY__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>