sfdx-spa-alcala/force-app/main/default/objects/Student_Year_Semester__c/listViews/St_Joseph.listView-meta.xml
<ListView>
    <fullName>St_Joseph</fullName>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>Student__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Student_Year_Semester__c.Junior_Highschool</value>
    </filters>
    <filters>
        <field>Section__c</field>
        <operation>equals</operation>
        <value>St. Joseph</value>
    </filters>
    <label>Gr. 10 - St. Joseph</label>
</ListView>