sfdx-spa-alcala/force-app/main/default/objects/Student_Year_Semester__c/listViews/St_Peter.listView-meta.xml
<ListView>
    <fullName>St_Peter</fullName>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>Student__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Student_Year_Semester__c.Senior_Highschool</value>
    </filters>
    <filters>
        <field>Section__c</field>
        <operation>equals</operation>
        <value>St. Peter</value>
    </filters>
    <label>Gr. 12 - St. Peter</label>
</ListView>